--- a/split-pane-layout-demo/src/main/res/values/strings.xml
+++ b/split-pane-layout-demo/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SPL</string>
+    <string name="app_name">SplitPaneLayout Demo</string>
     <string name="hello_world">Hello World!</string>
 </resources>
